# BiliDown

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
docs/: download-module-refactor.md  download-system-design.md
scripts/: build-dmg.sh  check-ffmpeg-log.sh  clean-build.sh  restart-tauri-dev.sh  test-bundle-ffmpeg.sh  test-ffmpeg-detection.sh  test-ffmpeg.sh
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: bilibili.rs  commands.rs  error_classification.rs  history.rs  lib.rs  logger.rs  login.rs  main.rs  persistence.rs
src-tauri/src/downloader/: chunked.rs  manager.rs  merger.rs  mod.rs  resume.rs  task.rs
src-tauri/src/ffmpeg/: detector.rs  mod.rs
src-tauri/src/platform/: bilibili.rs  mod.rs  youtube.rs
