[package]
name = "bilibili-downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "bilibili_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "deflate"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
url = "2.5"
anyhow = "1"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
flate2 = "1.0"
tar = "0.4"
zip = "2.1"
thiserror = "2"
arboard = "3"
tracing = "0.1"
rfd = "0.15"
